results/SVCOMP/conversational/log-assert6-2024_03_08_16_09_15.txt
import java.util.Random;

class assert6 {
    //@ ensures \old(i) >= 1000 ==> i >= 1000;
    //@ ensures i >= 1000 ==> false;
    public static void func() {
        int i = new Random().nextInt();

        if (i >= 1000) if (!(i >= 1000)) assert false;
    }
}
/home/max/Documents/JMLGPT/tmp/assert6.java:4: error: cannot find symbol
    //@ ensures \old(i) >= 1000 ==> i >= 1000;
                     ^
  symbol:   variable i
  location: class assert6
/home/max/Documents/JMLGPT/tmp/assert6.java:4: error: cannot find symbol
    //@ ensures \old(i) >= 1000 ==> i >= 1000;
                                    ^
  symbol:   variable i
  location: class assert6
/home/max/Documents/JMLGPT/tmp/assert6.java:5: error: cannot find symbol
    //@ ensures i >= 1000 ==> false;
                ^
  symbol:   variable i
  location: class assert6
3 errors

import java.util.Random;

class assert6 {
    //@ ensures i >= 1000 ==> i >= 1000;
    //@ ensures i >= 1000 ==> false;
    public static void func() {
        int i = new Random().nextInt();

        if (i >= 1000) if (!(i >= 1000)) assert false;
    }
}
/home/max/Documents/JMLGPT/tmp/assert6.java:4: error: cannot find symbol
    //@ ensures i >= 1000 ==> i >= 1000;
                ^
  symbol:   variable i
  location: class assert6
/home/max/Documents/JMLGPT/tmp/assert6.java:4: error: cannot find symbol
    //@ ensures i >= 1000 ==> i >= 1000;
                              ^
  symbol:   variable i
  location: class assert6
/home/max/Documents/JMLGPT/tmp/assert6.java:5: error: cannot find symbol
    //@ ensures i >= 1000 ==> false;
                ^
  symbol:   variable i
  location: class assert6
3 errors

import java.util.Random;

class assert6 {
    //@ ensures \result >= 1000 ==> \result >= 1000;
    //@ ensures \result >= 1000 ==> false;
    public static void func() {
        int i = new Random().nextInt();

        if (i >= 1000) if (!(i >= 1000)) assert false;
    }
}
/home/max/Documents/JMLGPT/tmp/assert6.java:4: error: A \result expression may not be used in the specification of a method that returns void
    //@ ensures \result >= 1000 ==> \result >= 1000;
                 ^
/home/max/Documents/JMLGPT/tmp/assert6.java:4: error: A \result expression may not be used in the specification of a method that returns void
    //@ ensures \result >= 1000 ==> \result >= 1000;
                                     ^
/home/max/Documents/JMLGPT/tmp/assert6.java:5: error: A \result expression may not be used in the specification of a method that returns void
    //@ ensures \result >= 1000 ==> false;
                 ^
3 errors

import java.util.Random;

class assert6 {
    //@ ensures i >= 1000 ==> i >= 1000;
    //@ ensures i >= 1000 ==> false;
    public static void func() {
        int i = new Random().nextInt();

        if (i >= 1000) if (!(i >= 1000)) assert false;
    }
}
/home/max/Documents/JMLGPT/tmp/assert6.java:4: error: cannot find symbol
    //@ ensures i >= 1000 ==> i >= 1000;
                ^
  symbol:   variable i
  location: class assert6
/home/max/Documents/JMLGPT/tmp/assert6.java:4: error: cannot find symbol
    //@ ensures i >= 1000 ==> i >= 1000;
                              ^
  symbol:   variable i
  location: class assert6
/home/max/Documents/JMLGPT/tmp/assert6.java:5: error: cannot find symbol
    //@ ensures i >= 1000 ==> false;
                ^
  symbol:   variable i
  location: class assert6
3 errors

import java.util.Random;

class assert6 {
    //@ ensures \result >= 1000 ==> \result >= 1000;
    //@ ensures \result >= 1000 ==> false;
    public static void func() {
        int i = new Random().nextInt();

        if (i >= 1000) if (!(i >= 1000)) assert false;
    }
}
/home/max/Documents/JMLGPT/tmp/assert6.java:4: error: A \result expression may not be used in the specification of a method that returns void
    //@ ensures \result >= 1000 ==> \result >= 1000;
                 ^
/home/max/Documents/JMLGPT/tmp/assert6.java:4: error: A \result expression may not be used in the specification of a method that returns void
    //@ ensures \result >= 1000 ==> \result >= 1000;
                                     ^
/home/max/Documents/JMLGPT/tmp/assert6.java:5: error: A \result expression may not be used in the specification of a method that returns void
    //@ ensures \result >= 1000 ==> false;
                 ^
3 errors

import java.util.Random;

class assert6 {
    //@ ensures i >= 1000 ==> i >= 1000;
    //@ ensures i >= 1000 ==> false;
    public static void func() {
        int i = new Random().nextInt();

        if (i >= 1000) if (!(i >= 1000)) assert false;
    }
}
/home/max/Documents/JMLGPT/tmp/assert6.java:4: error: cannot find symbol
    //@ ensures i >= 1000 ==> i >= 1000;
                ^
  symbol:   variable i
  location: class assert6
/home/max/Documents/JMLGPT/tmp/assert6.java:4: error: cannot find symbol
    //@ ensures i >= 1000 ==> i >= 1000;
                              ^
  symbol:   variable i
  location: class assert6
/home/max/Documents/JMLGPT/tmp/assert6.java:5: error: cannot find symbol
    //@ ensures i >= 1000 ==> false;
                ^
  symbol:   variable i
  location: class assert6
3 errors

import java.util.Random;

class assert6 {
    //@ ensures \result >= 1000 ==> \result >= 1000;
    //@ ensures \result >= 1000 ==> false;
    public static void func() {
        int i = new Random().nextInt();

        if (i >= 1000) if (!(i >= 1000)) assert false;
    }
}
/home/max/Documents/JMLGPT/tmp/assert6.java:4: error: A \result expression may not be used in the specification of a method that returns void
    //@ ensures \result >= 1000 ==> \result >= 1000;
                 ^
/home/max/Documents/JMLGPT/tmp/assert6.java:4: error: A \result expression may not be used in the specification of a method that returns void
    //@ ensures \result >= 1000 ==> \result >= 1000;
                                     ^
/home/max/Documents/JMLGPT/tmp/assert6.java:5: error: A \result expression may not be used in the specification of a method that returns void
    //@ ensures \result >= 1000 ==> false;
                 ^
3 errors

